Fixed z-index aside panel

--- a/content/less/components/aside.less
+++ b/content/less/components/aside.less
@@ -19,7 +19,7 @@
     padding: 20px 0 0 0;
     background: #171717;
     color: #fff;
-    z-index: 100;
+    z-index: 10;
 
     // -------------------------------------------------
     // All modificators
